# NM-

./: CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/gui/: README.md
editor/: CMakeLists.txt
editor/include/NovelMind/editor/: asset_browser_panel.hpp  build_settings_panel.hpp  console_panel.hpp  curve_editor_panel.hpp  debug_overlay_panel.hpp  editor_app.hpp  gui_panel_base.hpp  hierarchy_panel.hpp  hotkeys_manager.hpp  imgui_integration.hpp  inspector_panel.hpp  localization_panel.hpp  play_mode_controller.hpp  scene_view_panel.hpp  story_graph_panel.hpp  style_guide.hpp  timeline_panel.hpp  timeline_playback.hpp  voice_manager_panel.hpp
editor/src/: asset_browser_panel.cpp  build_settings_panel.cpp  console_panel.cpp  curve_editor_panel.cpp  debug_overlay_panel.cpp  editor_app.cpp  editor_runtime_host.cpp  gui_panel_base.cpp  hierarchy_panel.cpp  hotkeys_manager.cpp  imgui_integration.cpp  inspector_panel.cpp  localization_panel.cpp  play_mode_controller.cpp  scene_view_panel.cpp  story_graph_panel.cpp  timeline_panel.cpp  voice_manager.cpp  voice_manager_panel.cpp
engine_core/: CMakeLists.txt
engine_core/include/NovelMind/audio/: audio_manager.hpp
engine_core/include/NovelMind/localization/: localization_manager.hpp
engine_core/include/NovelMind/renderer/: color.hpp
engine_core/include/NovelMind/scripting/: ir.hpp  (+3 more)
engine_core/src/audio/: audio_manager.cpp
engine_core/src/input/: input_manager.cpp
engine_core/src/localization/: localization_manager.cpp
engine_core/src/renderer/: font.cpp  renderer.cpp  text_layout.cpp  texture.cpp
engine_core/src/save/: save_manager.cpp
engine_core/src/scene/: choice_menu.cpp  scene_graph.cpp  scene_inspector.cpp  transition.cpp
engine_core/src/scripting/: ir.cpp  script_runtime.cpp  validator.cpp  vm_security.cpp
engine_core/src/ui/: ui_framework.cpp
engine_core/src/vfs/: multi_pack_manager.cpp  pack_reader.cpp
tests/: CMakeLists.txt
tests/integration/: test_gui_panels.cpp
tests/unit/: test_fuzzing.cpp
